# adding_text_to_video

./: main.py  pyproject.toml
videos/: running_text1688196382.avi
